# fullstack-fastapi

./: .gitignore  .pre-commit-config.yaml  cSpell.json  pyproject.toml
.github/workflows/: cSpell.json  python-app.yml
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  tox.ini
backend/app/: main.py
backend/app/api/: root.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: user.py
backend/app/core/: config.py
backend/app/cruds/: user.py
backend/app/db/: connect.py  init_db.py
backend/app/migrations/: README  env.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: user.py
backend/tests/: conftest.py  test_user.py  validate.py
copilot/: .workspace
copilot/api/: manifest.yml
copilot/api/addons/: api-cluster.yml
