[tool.poetry]
name = "fullstack-fastapi"
version = "0.1.0"
description = ""
authors = ["kakakoi"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
isort = "^5.10.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 127
skip_glob = "**/migrations/*.py"

[tool.black]
line-length = 127
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | app/migrations
    | cdk
    | .venv
)
'''
