[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
databases = "^0.5.3"
SQLAlchemy = "^1.4.28"
asyncpg = "^0.25.0"
psycopg2 = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = "^21.12b0"
aiosqlite = "^0.17.0"
pytest-asyncio = "^0.16.0"
pytest-env = "^0.6.2"
isort = "^5.10.1"
tox = "^3.24.4"
bandit = "^1.7.1"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
